anexo hoja de calculo

--- a/src/Contramuestras.css
+++ b/src/Contramuestras.css
@@ -78,14 +78,15 @@ button {
     color: #292727; /* Gris oscuro */
 }
 
-/* Contenedor del formulario */
 .formulario {
-    width: 100%;
-    max-width: 400px;
+    width: 90%; /* Asegura que el formulario ocupe el 90% del ancho de la pantalla, con un margen */
+    max-width: 700px; /* Limita el ancho máximo del formulario */
     background: #a6a9a7;
-    padding: 30px;
+    padding: 20px; /* Reducido para ajustarse mejor */
     border-radius: 16px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
+    margin: 20px auto; /* Centra el formulario en la página */
+    box-sizing: border-box; /* Asegura que el padding no afecte el ancho total */
 }
   
 /* Formulario interno */
